--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
+    <div class="container">
+        <div style = "--i:1"><span>1</span></div>
+        <div style = "--i:2"><span>2</span></div>
+        <div style = "--i:3"><span>3</span></div>
+        <div style = "--i:4"><span>4</span></div>
+        <div style = "--i:5"><span>5</span></div>
+        <div style = "--i:6"><span>6</span></div>
+        <div style = "--i:7"><span>7</span></div>
+        <div style = "--i:8"><span>8</span></div>
+    
+    </div>
     <script src = "./src/main.js"></script>
 </body>
 </html>
